--- a/index.html
+++ b/index.html
@@ -11,11 +11,33 @@
       <header>
         Ka Lok Cheung
         <nav>
-          <a href="#">Profile</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Contact</a>
+          <a href="#profile">Profile</a>
+          <a href="#experience">Experience</a>
+          <a href="#portfolio">Portfolio</a>
+          <a href="#contact">Contact</a>
         </nav>
       </header>
+      <section>
+        will contain image
+      </section>
+      <div id="profile">
+        <h1>Profile</h1>
+        <p>blah</p>
+      </div>
+      <div id="experience">
+        <h2>Experience</h2>
+        <p>blah blah</p>
+      </div>
+      <div id="portfolio">
+      </div>
+      <div id="contact">
+        <h4>Contacts</h4>
+        <p>
+          Email: kalok3845@gmail.com <br>
+          +44(0)7784 150 556 <br>
+
+        </p>
+      </div>
     </div>
   </body>
 </html>
