--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
           <a href="#profile">Profile</a>
           <a href="#experience">Experience</a>
-          <a href="#portfolio">Portfolio</a>
+          <!-- <a href="#portfolio">Portfolio</a> -->
           <a href="#contact">Contact</a>
         </nav>
       </header>
