--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
       </section>
       <div id="profile">
         <h1>Profile</h1>
-        <p>blah</p>
+        <p>
+          I am currently a Trainee with Sparta Global with a BSc in Chemistry and am awaiting results for MSc in Computer Information Systems. During my time in university, I received some military training due to a society that was run by the military and I was on track to becoming an Army Reserve's Officer. <br>
+          I am excited to learn and experince more on coding, and hopefully be able to use my knowledge and experiences in the commercial world.
+        </p>
       </div>
       <div id="experience">
         <h2>Experience</h2>
-        <p>blah blah</p>
+        <p>I have experience in working with computer hardware and am now focusing on the coding aspect of technology.</p>
       </div>
       <div id="portfolio">
       </div>
