--- a/index.html
+++ b/index.html
@@ -20,25 +20,33 @@
       <section>
       </section>
       <div id="profile">
-        <h1>Profile</h1>
-        <p>
-          I am currently a Trainee with Sparta Global with a BSc in Chemistry and am awaiting results for MSc in Computer Information Systems. During my time in university, I received some military training due to a society that was run by the military and I was on track to becoming an Army Reserve's Officer. <br>
-          I am excited to learn and experince more on coding, and hopefully be able to use my knowledge and experiences in the commercial world.
-        </p>
+        <div class="prof">
+          <h1>Profile</h1>
+          <p>
+            I am currently a Trainee with Sparta Global with a BSc in Chemistry and am awaiting results for MSc in Computer Information Systems. During my time in university, I received some military training due to a society that was run by the military and I was on track to becoming an Army Reserve's Officer. <br>
+            I am excited to learn and experince more on coding, and hopefully be able to use my knowledge and experiences in the commercial world.
+          </p>
+        </div>
       </div>
       <div id="experience">
-        <h2>Experience</h2>
-        <p>I have experience in working with computer hardware and am now focusing on the coding aspect of technology.</p>
+        <div class="prof">
+          <h1>Experience</h1>
+          <p>
+            I have experience in working with computer hardware and am now focusing on the coding aspect of technology.
+          </p>
+          <h2>Languages</h2>
+        </div>
       </div>
       <div id="portfolio">
       </div>
       <div id="contact">
-        <h4>Contacts</h4>
-        <p>
-          Email: kalok3845@gmail.com <br>
-          +44(0)7784 150 556 <br>
-
-        </p>
+        <div class="prof">
+          <h1>Contacts</h1>
+          <p>
+            Email: kalok3845@gmail.com <br>
+            +44(0)7784 150 556 <br>
+          </p>
+        </div>
       </div>
     </div>
   </body>
