--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             I have experience in working with computer hardware and am now focusing on the coding aspect of technology.
           </p>
           <h2>Languages</h2>
+          <ul>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>Preact</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>MySQL</li>
+          </ul>
         </div>
       </div>
       <div id="portfolio">
