--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="images" href="images">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="container">
@@ -21,8 +23,9 @@
       </section>
       <div id="profile">
         <div class="prof">
+          <img src="./images/profile.jpeg" alt="profile picture">
           <h1>Profile</h1>
-          <p>
+          <p class="pdesc">
             I am currently a Trainee with Sparta Global with a BSc in Chemistry and am awaiting results for MSc in Computer Information Systems. During my time in university, I received some military training due to a society that was run by the military and I was on track to becoming an Army Reserve's Officer. <br>
             I am excited to learn and experince more on coding, and hopefully be able to use my knowledge and experiences in the commercial world.
           </p>
@@ -54,6 +57,7 @@
             Email: kalok3845@gmail.com <br>
             +44(0)7784 150 556 <br>
           </p>
+          <button type="button" class="btn" name="button"><a href="https://www.facebook.com/kalok.cheung.121" class="fa fa-facebook"></a></button>
         </div>
       </div>
     </div>
