contact icons made

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             +44(0)7784 150 556 <br>
           </p>
           <button type="button" class="btn" name="button"><a href="https://www.facebook.com/kalok.cheung.121" class="fa fa-facebook"></a></button>
+          <button type="button" class="btn" name="button"><a href="https://www.linkedin.com/in/kalok-cheung-94ba10102/" class="fa fa-linkedin"></a></button>
         </div>
       </div>
     </div>
