--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="images" href="images">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
@@ -59,6 +60,7 @@
           </p>
           <button type="button" class="btn" name="button"><a href="https://www.facebook.com/kalok.cheung.121" class="fa fa-facebook"></a></button>
           <button type="button" class="btn" name="button"><a href="https://www.linkedin.com/in/kalok-cheung-94ba10102/" class="fa fa-linkedin"></a></button>
+          <button type="button" class="btn"><a href="https://github.com/Kalok9990" class="fa fa-github"></a></button>
         </div>
       </div>
     </div>
