--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <title>Ka Lok Cheung</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="images" href="images">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="images" href="images">
   </head>
   <body>
     <div class="container">
       <header>
         Ka Lok Cheung
-        <nav>
+        <nav class="navbar-fixed-top">
           <a href="#profile">Profile</a>
           <a href="#experience">Experience</a>
-          <!-- <a href="#portfolio">Portfolio</a> -->
+          <a href="#portfolio">Portfolio</a>
           <a href="#contact">Contact</a>
         </nav>
       </header>
@@ -24,7 +24,7 @@
       </section>
       <div id="profile">
         <div class="prof">
-          <img src="./images/profile.jpeg" alt="profile picture">
+          <img src="./images/profile.jpeg" class="img-responsive" alt="Responsive image">
           <h1>Profile</h1>
           <p class="pdesc">
             I am currently a Trainee with Sparta Global with a BSc in Chemistry and am awaiting results for MSc in Computer Information Systems. During my time in university, I received some military training due to a society that was run by the military and I was on track to becoming an Army Reserve's Officer. <br>
@@ -38,7 +38,7 @@
           <p>
             I have experience in working with computer hardware and am now focusing on the coding aspect of technology.
           </p>
-          <h2>Languages</h2>
+          <h3>Languages</h3>
           <ul>
             <li>Java</li>
             <li>JavaScript</li>
@@ -50,6 +50,7 @@
         </div>
       </div>
       <div id="portfolio">
+        <a href="#"></a>
       </div>
       <div id="contact">
         <div class="prof">
@@ -60,7 +61,7 @@
           </p>
           <button type="button" class="btn" name="button"><a href="https://www.facebook.com/kalok.cheung.121" class="fa fa-facebook"></a></button>
           <button type="button" class="btn" name="button"><a href="https://www.linkedin.com/in/kalok-cheung-94ba10102/" class="fa fa-linkedin"></a></button>
-          <button type="button" class="btn"><a href="https://github.com/Kalok9990" class="fa fa-github"></a></button>
+          <button type="button" class="btn"><a href="https://github.com/Kalok9990" class=" fa fa-github"></a></button>
         </div>
       </div>
     </div>
