photography page added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="images" href="images">
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <header>
         Ka Lok Cheung
         <nav class="navbar-fixed-top">
@@ -50,7 +50,11 @@
         </div>
       </div>
       <div id="portfolio">
-        <a href="#"></a>
+        <div class="prof">
+          <h1>Portfolio</h1>
+          <a href="./pages/photo.html">Photography</a>
+          <a href="#">Dissertation</a>
+        </div>
       </div>
       <div id="contact">
         <div class="prof">
