--- a/pages/photo.html
+++ b/pages/photo.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ka Lok Cheung</title>
   </head>
   <body>
+    <div class="container-fluid">
+      <h1>Pictures</h1>
 
+    </div>
   </body>
 </html>
