--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="row">
             <h1>Portfolio</h1>
             <a href="./pages/photo.html">Photography</a>
-            <a href="#">Dissertation</a>
+            <a href="./pages/disso.pdf" target="_blank">Dissertation</a>
           </div>
         </div>
       </div>
