extra image added

--- a/pages/photo.html
+++ b/pages/photo.html
@@ -47,37 +47,34 @@
             <li data-target="#myCarousel" data-slide-to="4"></li>
             <li data-target="#myCarousel" data-slide-to="5"></li>
             <li data-target="#myCarousel" data-slide-to="6"></li>
+            <li data-target="#myCarousel" data-slide-to="7"></li>
           </ol>
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
-
             <div class="item active">
               <img src="../images/alley.jpg" alt="alley">
             </div>
-
             <div class="item">
               <img src="../images/corridor.jpg" alt="corridor">
             </div>
-
             <div class="item">
               <img src="../images/sunset.jpg" alt="sunset">
             </div>
-
             <div class="item">
               <img src="../images/guy.jpg" alt="guy">
             </div>
-
             <div class="item">
               <img src="../images/lamp.jpg" alt="lamp">
             </div>
-
             <div class="item">
               <img src="../images/malta.jpg" alt="malta">
             </div>
-
             <div class="item">
               <img src="../images/malta2.jpg" alt="malta2">
+            </div>
+            <div class="item">
+              <img src="../images/lizard.JPG" alt="lizard">
             </div>
           </div>
 
@@ -90,6 +87,20 @@
             <span class="glyphicon glyphicon-chevron-right"></span>
             <span class="sr-only">Next</span>
           </a>
+        </div>
+      </div>
+      <div id="contact">
+        <div class="prof">
+          <div class="row">
+            <h1>Contacts</h1>
+            <p>
+              Email: kalok3845@gmail.com <br>
+              +44(0)7784 150 556 <br>
+            </p>
+            <button type="button" class="btn" name="button"><a href="https://www.facebook.com/kalok.cheung.121" class="fa fa-facebook"></a></button>
+            <button type="button" class="btn" name="button"><a href="https://www.linkedin.com/in/kalok-cheung-94ba10102/" class="fa fa-linkedin"></a></button>
+            <button type="button" class="btn"><a href="https://github.com/Kalok9990" class=" fa fa-github"></a></button>
+          </div>
         </div>
       </div>
     </div>
