--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           </div>
         </div>
       </div>
+      <img src="images/line.png" class="line" alt="line">
       <div id="experience">
         <div class="prof">
           <div class="row">
@@ -66,6 +67,7 @@
           </div>
         </div>
       </div>
+      <img src="images/line.png" class="line" alt="line">
       <div id="portfolio">
         <div class="prof">
           <div class="row">
@@ -75,6 +77,7 @@
           </div>
         </div>
       </div>
+      <img src="images/line.png" class="line" alt="line">
       <div id="contact">
         <div class="prof">
           <div class="row">
