--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#profile">Profile</a></li>
-              <li class="active"><a href="#experience">Experience</a></li>
+              <li><a href="#profile">Profile</a></li>
+              <li><a href="#experience">Experience</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
