--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- ---------------------NAVBAR--------------------- -->
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -33,8 +34,10 @@
           </div>
         </div>
       </nav>
+      <!-- ---------------------contains image--------------------- -->
       <section>
       </section>
+      <!-- ---------------------PROFILE--------------------- -->
       <div id="profile">
         <div class="prof">
           <div class="row">
@@ -48,6 +51,7 @@
         </div>
       </div>
       <img src="images/line.png" class="line" alt="line">
+      <!-- ---------------------EXPERIENCE--------------------- -->
       <div id="experience">
         <div class="prof">
           <div class="row">
@@ -68,6 +72,7 @@
         </div>
       </div>
       <img src="images/line.png" class="line" alt="line">
+      <!-- ---------------------PORTFOLIO--------------------- -->
       <div id="portfolio">
         <div class="prof">
           <div class="row">
@@ -78,6 +83,7 @@
         </div>
       </div>
       <img src="images/line.png" class="line" alt="line">
+      <!-- ---------------------CONTACT--------------------- -->
       <div id="contact">
         <div class="prof">
           <div class="row">
