--- a/pages/photo.html
+++ b/pages/photo.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- ---------------------NAVBAR--------------------- -->
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -33,8 +34,10 @@
           </div>
         </div>
       </nav>
+      <!-- ---------------------IMAGE--------------------- -->
       <section>
       </section>
+      <!-- ---------------------CAROUSEL--------------------- -->
       <div class="container2">
         <h2>Pictures</h2>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
