--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <!-- ---------------------contains image--------------------- -->
       <section>
       </section>
+      <img src="images/line.png" class="line" alt="line">
       <!-- ---------------------PROFILE--------------------- -->
       <div id="profile">
         <div class="prof">
