--- a/pages/photo.html
+++ b/pages/photo.html
@@ -26,8 +26,8 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="../index.html#profile">Profile</a></li>
-              <li class="active"><a href="../index.html#experience">Experience</a></li>
+              <li><a href="../index.html#profile">Profile</a></li>
+              <li><a href="../index.html#experience">Experience</a></li>
               <li><a href="../index.html#portfolio">Portfolio</a></li>
               <li><a href="../index.html#contact">Contact</a></li>
             </ul>
@@ -41,7 +41,7 @@
       <div class="container2">
         <h2>Pictures</h2>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
+          <!-- ---------------------INDICATORS--------------------- -->
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -52,8 +52,7 @@
             <li data-target="#myCarousel" data-slide-to="6"></li>
             <li data-target="#myCarousel" data-slide-to="7"></li>
           </ol>
-
-          <!-- Wrapper for slides -->
+          <!-- ---------------------SLIDES--------------------- -->
           <div class="carousel-inner">
             <div class="item active">
               <img src="../images/alley.jpg" alt="alley">
@@ -80,8 +79,7 @@
               <img src="../images/lizard.JPG" alt="lizard">
             </div>
           </div>
-
-          <!-- Left and right controls -->
+          <!-- ---------------------Left and right controls--------------------- -->
           <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
             <span class="sr-only">Previous</span>
@@ -92,6 +90,8 @@
           </a>
         </div>
       </div>
+      <img src="../images/line.png" class="line" alt="line">
+      <!-- ---------------------CONTACT--------------------- -->
       <div id="contact">
         <div class="prof">
           <div class="row">
